# httc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  build.zig  build.zig.zon  justfile  vcpkg-configuration.json  vcpkg.json
benchmarks/: CMakeLists.txt  parser_bench.cpp  run_bench.sh
benchmarks/rust_compare/: Cargo.toml
benchmarks/rust_compare/src/: main.rs
cmake/: httcConfig.cmake.in
examples/: CMakeLists.txt  cob_spec.cpp  cookies.cpp  simple.cpp
examples/static_server/: index.html  main.cpp
examples/static_server/public/: test.txt
include/: common.h  headers.h  headers.hpp  io.hpp  reader.h  reader.hpp  request.h  request.hpp  request_parser.h  request_parser.hpp  request_parser.tpp  response.h  response.hpp  router.h  router.hpp  server.h  server.hpp  server_config.h  server_config.hpp  status.hpp  uri.hpp
include/httc/: common.h  headers.h  headers.hpp  io.hpp  percent_encoding.h  request.h  request.hpp  request_parser.h  request_parser.hpp  response.h  response.hpp  router.h  router.hpp  server.h  server.hpp  status.hpp  uri.h
include/httc/utils/: file_handlers.hpp  file_server.h  fs.hpp  mime.hpp
include/utils/: file_server.h
src/: CMakeLists.txt  common.cpp  headers.cpp  io.cpp  percent_encoding.cpp  reader.cpp  request.cpp  request_parser.cpp  response.cpp  router.cpp  server.cpp  status.cpp  uri.cpp  validation.cpp
src/utils/: file_handlers.cpp  file_server.cpp  fs.cpp  mime.cpp
test/: CMakeLists.txt  async_test.hpp  headers.cpp  hello-world.cpp  percent_encoding.cpp  request_parser.cpp  response.cpp  router.cpp  status.cpp  uri.cpp
